--- a/src/components/css/Dialogs.scss
+++ b/src/components/css/Dialogs.scss
@@ -1223,3 +1223,12 @@
     transform: translateY(0) scale(1);
   }
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
